--- a/notice-single.html
+++ b/notice-single.html
@@ -166,18 +166,18 @@
             </div>
             <div class="modal-body">
                 <form action="#" class="row">
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                         <input type="text" class="form-control mb-3" id="loginPhone" name="loginPhone" placeholder="Phone">
-                    </div>
+                    </div> -->
                     <div class="col-12">
-                        <input type="text" class="form-control mb-3" id="loginName" name="loginName" placeholder="Name">
-                    </div>
-                    <div class="col-12">
-                        <input type="password" class="form-control mb-3" id="loginPassword" name="loginPassword" placeholder="Password">
-                    </div>
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-primary">LOGIN</button>
-                    </div>
+                      <input type="text" class="form-control mb-3" id="loginName" name="loginName" placeholder="Username">
+                  </div>
+                  <div class="col-12">
+                      <input type="password" class="form-control mb-3" id="loginPassword" name="loginPassword" placeholder="Password">
+                  </div>
+                  <div class="col-12">
+                      <button onclick="portalNav()" type="submit" class="btn btn-primary">LOGIN</button>
+                  </div>
                 </form>
             </div>
         </div>
@@ -352,6 +352,6 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
-
+<script src="js/portal.js"></script>
 </body>
 </html>
