--- a/about.html
+++ b/about.html
@@ -166,18 +166,19 @@
             </div>
             <div class="modal-body">
                 <form action="#" class="row">
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                         <input type="text" class="form-control mb-3" id="loginPhone" name="loginPhone" placeholder="Phone">
-                    </div>
+                    </div> -->
                     <div class="col-12">
-                        <input type="text" class="form-control mb-3" id="loginName" name="loginName" placeholder="Name">
+                        <input type="text" class="form-control mb-3" id="loginName" name="loginName" placeholder="Username">
                     </div>
                     <div class="col-12">
                         <input type="password" class="form-control mb-3" id="loginPassword" name="loginPassword" placeholder="Password">
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary">LOGIN</button>
+                        <button onclick="portalNav()" type="submit" class="btn btn-primary">LOGIN</button>
                     </div>
+                    
                 </form>
             </div>
         </div>
@@ -193,7 +194,9 @@
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="@@page-link">About Us</a></li>
           <li class="list-inline-item text-white h3 font-secondary @@nasted"></li>
         </ul>
-        <p class="text-lighten">Our courses offer a good compromise between the continuous assessment favoured by some universities and the emphasis placed on final exams by others.</p>
+        <p class="text-lighten">Worldwide Education provides foremost expert education counsel to students residing anywhere in Qatar. We assist students in retaining valued talent by guiding and supporting them to find best-fit schools for them. Our goal is to help students with long-range education planning.
+          find perfect colleges, courses, help with application, counsel for studies
+          </p>
       </div>
     </div>
   </div>
@@ -207,8 +210,8 @@
       <div class="col-12">
         <img class="img-fluid w-100 mb-4" src="images/about/about-page.jpg" alt="about image">
         <h2 class="section-title">ABOUT OUR JOURNY</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ipsa illo quod veritatis, magni debitis fugiat dolore voluptates! Consequatur, aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perferendis sint optio similique. Et amet magni facilis vero corporis quos.</p>
-        <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum a, facere fugit error accusamus est officiis vero in, nostrum laboriosam corrupti explicabo, cumque repudiandae deleniti perspiciatis quae consectetur enim. Laboriosam!</p>
+        <p>Worldwide Education was founded in ___. Since its inception, we have served hundreds of students by helping them get placed in the top schools around the world; we are a recognized industry specialist in education advisement and in customized consulting services.
+          We are a Qatar based organization regulated by ______. We counsel students for studies in Qatar and abroad. We have a global network of delivery centers. </p>
       </div>
     </div>
   </div>
@@ -278,7 +281,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <h2 class="section-title">Our Teachers</h2>
+          <h2 class="section-title">Our Faculty</h2>
         </div>
         <!-- teacher -->
         <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
@@ -464,6 +467,7 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
+<script src="js/portal.js"></script>
 
 </body>
 </html>
